--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.0.+'
     compile 'com.android.support:appcompat-v7:21.0.+'
-    compile LC.checkLocal('blue.walker:beacon-lib:0.1.+', 'BeaconLib')
+    compile LC.checkLocal('blue.walker:BeaconLib:0.1.+', 'BeaconLib')
 }
 
 task wrapper(type: Wrapper) {
